# civicclerk

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  LICENSE-CODE  LICENSE-DOCS  MILESTONE_0_DONE.md  MILESTONE_10_DONE.md  MILESTONE_11_DONE.md  MILESTONE_12_DONE.md  MILESTONE_1_DONE.md  MILESTONE_2_DONE.md  MILESTONE_3_DONE.md  MILESTONE_4_DONE.md  MILESTONE_5_DONE.md  MILESTONE_6_DONE.md  MILESTONE_7_DONE.md  MILESTONE_8_DONE.md  MILESTONE_9_DONE.md  PRODUCTION_DEPTH_AGENDA_INTAKE_DONE.md  PRODUCTION_DEPTH_AGENDA_ITEM_PERSISTENCE_DONE.md  PRODUCTION_DEPTH_LIVE_AGENDA_INTAKE_SCREEN_DONE.md  PRODUCTION_DEPTH_LIVE_ARCHIVE_SCREEN_DONE.md  PRODUCTION_DEPTH_LIVE_CONNECTOR_IMPORT_SCREEN_DONE.md  PRODUCTION_DEPTH_LIVE_MEETING_OUTCOMES_SCREEN_DONE.md  PRODUCTION_DEPTH_LIVE_MINUTES_DRAFT_SCREEN_DONE.md  PRODUCTION_DEPTH_LIVE_PACKET_EXPORT_SCREEN_DONE.md  PRODUCTION_DEPTH_LIVE_PACKET_NOTICE_SCREENS_DONE.md  PRODUCTION_DEPTH_MEETING_PERSISTENCE_DONE.md  PRODUCTION_DEPTH_NOTICE_CHECKLIST_DONE.md  PRODUCTION_DEPTH_PACKET_ASSEMBLY_DONE.md  PRODUCTION_DEPTH_PACKET_EXPORT_DONE.md  PRODUCTION_DEPTH_STAFF_WORKFLOW_SCREENS_DONE.md  README.md  README.txt  SECURITY.md  (+7 more)
.fablize/: goals.json  ledger.jsonl
.github/: PULL_REQUEST_TEMPLATE.md
.pipelines/: action-classification.yaml  civicclerk-release-plan.md
civicclerk/: __init__.py  agenda_intake.py  agenda_lifecycle.py  cc7_completeness.py  connector_import_sync.py  connectors.py  demo_seed.py  integration_contracts.py  main.py  meeting_body.py  meeting_lifecycle.py  minutes.py  mock_city_environment.py  models.py  motion_vote.py  notice_checklist.py  oidc_auth.py  packet_assembly.py  packet_notice.py  prompt_evals.py  prompt_library.py  public_archive.py  public_ui.py  staff_ui.py  suite_session_compat.py  vendor_delta.py  vendor_live_sync.py  vendor_network_sync.py  vendor_sync_persistence.py  worker.py
cleanroom/: civicclerk.Dockerfile
docker/: nginx.conf
docs/: MILESTONES.md  RECONCILIATION.md  browser-qa-b1-default-protected-summary.md  browser-qa-co4-tier1-ledger-summary.md  browser-qa-production-depth-agenda-intake-summary.md  browser-qa-production-depth-agenda-item-persistence-summary.md  browser-qa-production-depth-live-agenda-intake-screen-summary.md  browser-qa-production-depth-live-archive-screen-summary.md  browser-qa-production-depth-live-connector-import-screen-summary.md  browser-qa-production-depth-live-meeting-outcomes-screen-summary.md  browser-qa-production-depth-live-minutes-draft-screen-summary.md  browser-qa-production-depth-live-packet-export-screen-summary.md  browser-qa-production-depth-live-packet-notice-screens-summary.md  browser-qa-production-depth-meeting-persistence-summary.md  browser-qa-production-depth-notice-checklist-summary.md  browser-qa-production-depth-packet-assembly-summary.md  browser-qa-production-depth-packet-export-summary.md  browser-qa-production-depth-staff-workflow-screens-summary.md  browser-qa-v0.1.1-release-summary.md  browser-qa-v0.1.19-release-summary.md  browser-qa-v0.1.20-release-summary.md  browser-qa-vendor-live-sync-docs-summary.md  browser-qa-vendor-sync-persistence-docs-summary.md  cc7-api-frontend-completeness.md  frontend-staff-shell.md  github-discussions-seed.md  index.html  integration-depth-contracts.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
prompts/: agenda_item_summary.yaml  closed_session_safe_summarizer.yaml  minutes_draft.yaml  motion_vote_summary.yaml  notice_compliance_reviewer.yaml  ordinance_resolution_extractor.yaml  packet_completeness_reviewer.yaml  public_plain_language_meeting_explainer.yaml  staff_report_normalizer.yaml
scripts/: build_release_handoff_bundle.ps1  build_release_handoff_bundle.sh  capture-cc7-browser-qa.mjs  check-civiccore-placeholder-imports.py  check-tier1-ledger.py  check_backup_restore_rehearsal.py  check_connector_sync_readiness.py  (+28 more)
(+172 files in other folders)
