[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "civicclerk"
version = "1.0.2"
description = "CivicClerk runtime foundation for municipal meeting, agenda, packet, and minutes workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "CivicSuite contributors" }
]
dependencies = [
  "civiccore @ https://github.com/CivicSuite/civiccore/releases/download/v1.2.0/civiccore-1.2.0-py3-none-any.whl#sha256=a94ce958e36fb03c8d961e4db4672ce5bcfa25765c57d75886e999cf15703ec7",
  "celery[redis]>=5.4.0,<6.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "psycopg2-binary>=2.9.0,<3.0.0",
  "PyJWT>=2.8.0,<3.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.0.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "uses_civicclerk_default_staff_mode: run without the legacy open-mode test harness override",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["civicclerk"]
force-include = { "prompts" = "prompts" }

[tool.hatch.build.targets.sdist]
include = [
  "civicclerk",
  "prompts",
  "scripts",
  "tests",
  "README.md",
  "CHANGELOG.md",
  "USER-MANUAL.md",
  "LICENSE-CODE",
  "LICENSE-DOCS",
]
